# RayWhitter

./: .gitignore  CMakeLists.txt  README.md
res/: bunny.txt  compare.txt  demo.txt  scene.txt  sceneObjects.txt  spheres.txt  teapot.txt
src/: intersection.cpp  intersection.hpp  main.cpp  material.cpp  material.hpp  matte.cpp  matte.hpp  phong.cpp  phong.hpp  plane.cpp  plane.hpp  point_light.cpp  point_light.hpp  primatives.hpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
src/core/: bounding_box.cpp  bounding_box.hpp  constants.hpp  intersection.cpp  intersection.hpp  material.cpp  material.hpp  parser.cpp  ray.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp
src/lights/: light.cpp  light.hpp  point_light.cpp  point_light.hpp
src/materials/: material.cpp  material.hpp  matte.cpp  matte.hpp  phong.cpp  phong.hpp  reflective.cpp  reflective.hpp  refractive.cpp  refractive.hpp
src/shapes/: mesh.cpp  mesh.hpp  plane.cpp  plane.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
